<resources>
    <string name="app_name">GymModel</string>

    <string-array name="filtros_ranking">
        <item>Por peso perdido</item>
        <item>Por días registrados</item>
        <item>Por progresos registrados</item>
    </string-array>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="consejo_ia">🤖 Consejo del día: Mantén una actitud positiva y entrena con constancia.</string>
    <string name="title_consejoia">🤖 Consejo del día: %1$s</string>
    <string name="img_gym">Imagen motivacional gimnasio</string>
    <string name="title_register">REGÍSTRATE</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_accept">Acepto los</string>
    <string name="text_terms">términos y condiciones</string>
    <string name="btn_account_create">Crear cuenta</string>
    <string name="text_account_question">¿Ya tienes cuenta?</string>
    <string name="text_login">Inicia sesión</string>
    <string name="text_error_name">El nombre de usuario es obligatorio</string>
    <string name="text_email_incorrect">Correo electrónico inválido</string>
    <string name="text_password_6_characters">La contraseña debe tener al menos 6 caracteres</string>
    <string name="text_accept_terms">Debes aceptar los términos y condiciones</string>
    <string name="text_username_or_email_repeat">El nombre de usuario o el correo electrónico ya está en uso</string>
    <string name="text_error_register">Error al registrar</string>
    <string name="text_terms_register">"\n            Bienvenido a GymModel, una app fitness para seguir tu progreso, reservar clases y recibir planes personalizados.\n\n            Al usar la app aceptas:\n            • Proporcionar información real.\n            • Usar la app de forma responsable.\n            • No compartir tus credenciales.\n            • Que tus datos se guardarán de forma segura.\n\n            GymModel no se hace responsable del mal uso de los planes de entrenamiento. Consulta siempre con un entrenador si tienes dudas.\n        "</string>
    <string name="text_accept_term">Aceptar</string>
    <string name="text_menu_login">INICIAR SESIÓN</string>
    <string name="text_username">Nombre de usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="text_remember_username">Recordar usuario</string>
    <string name="text_btn_login">Iniciar sesión</string>
    <string name="text_no_account">¿No tienes cuenta? </string>
    <string name="text_register"> Regístrate</string>
    <string name="title_goprofile">Ir a perfil</string>
    <string name="title_gologout">Cerrar sesión</string>
    <string name="title_menu_preferences">Preferencias</string>
    <string name="title_menu_terms">Términos y condiciones</string>
    <string name="title_menu_about">Sobre GymModel</string>
    <string name="title_menu_contact">Contacto</string>
    <string name="title_menu_home">Inicio</string>
    <string name="title_preferences">Preferencias</string>
    <string name="title_notis">Activar notificaciones</string>
    <string name="title_tvnotis">Notificaciones</string>
    <string name="title_tvthemedark">Tema oscuro</string>
    <string name="title_themedark">Activar tema oscuro</string>
    <string name="title_tvnameapp">Nombre de la App</string>
    <string name="title_nameapp">GymModel</string>
    <string name="title_tvversion">Versión</string>
    <string name="title_version">1.0.0</string>
    <string name="text_appversion">Versión 1.0</string>
    <string name="title_grateful">Gracias por usar GymModel.</string>
    <string name="title_cancontact">Puedes escribirnos desde la sección Contacto del menú.</string>
    <string name="text_contact">Contacto</string>
    <string name="text_resp">GymModel no se hace responsable de mal uso o resultados físicos derivados del uso de la app.</string>
    <string name="title_resp">Limitación de responsabilidad</string>
    <string name="text_dates">GymModel protege tus datos. No se comparten sin consentimiento.</string>
    <string name="title_privacity">Política de privacidad</string>
    <string name="text_propiety">Todo el contenido pertenece a GymModel. No se permite su reproducción.</string>
    <string name="title_propiety">Propiedad intelectual</string>
    <string name="text_responsability">El usuario debe proporcionar información veraz y está obligado a usar la app de forma responsable.</string>
    <string name="text_access">Acceso y uso</string>
    <string name="text_access_login_reg">- Registro, login, clases semanales, progreso, IA y ranking.</string>
    <string name="text_funcion">Funcionalidad de la Aplicación</string>
    <string name="text_terms_conditions">Al acceder y utilizar esta aplicación, aceptas cumplir con los siguientes términos y condiciones. GymModel se reserva el derecho de modificar estos términos en cualquier momento.</string>
    <string name="text_use">Uso de la aplicación</string>
    <string name="text_training_phisicaly">Una aplicación de entrenamiento y seguimiento físico diseñada para mejorar tu experiencia fitness a través de herramientas tecnológicas avanzadas.</string>
    <string name="text_welcome">Bienvenido a GymModel</string>
    <string name="text_terms_condition">Términos y Condiciones</string>
    <string name="text_about">Sobre GymModel</string>
    <string name="title_gym">🏋️‍♂️ GymModel</string>
    <string name="text_version">Versión 1.0.0</string>
    <string name="text_explain">GymModel es una aplicación diseñada para ayudarte a mejorar tu experiencia en el gimnasio. Puedes seguir tu progreso, reservar clases, y generar planes personalizados gracias a la inteligencia artificial.</string>
    <string name="text_owner">Desarrollado por Daniel Escrich Aliaga</string>
    <string name="text_year">© 2025 GymModel</string>
    <string name="title_doubts">💬 ¿Tienes dudas o sugerencias?</string>
    <string name="title_email">✉️ Email: contacto@gymmodelapp.com</string>
    <string name="title_phone">📞 Teléfono: +34 675 04 02 83</string>
    <string name="title_schedule">🕒 Horario: Lunes a viernes de 9:00 a 21:00</string>
    <string name="title_help">😊 ¡Estaremos encantados de ayudarte!</string>
    <string name="title_contact">Contacto</string>
    <string name="title_username">Usuario</string>
    <string name="description_icon">Icono usuario</string>
    <string name="txt_name">Nombre</string>
    <string name="text_weight_example">82 kg</string>
    <string name="text_day_example">Lunes</string>
    <string name="text_day">Día 1:</string>
    <string name="text_text">Texto</string>
    <string name="text_tvtipo">🏋️ Entrenamiento</string>
    <string name="text_calendar">📅 27 mayo 2025 - 12:30</string>
    <string name="text_example_day">DÍA 1:\n- Flexiones | 15 reps x3</string>
    <string name="description_icono">icono</string>
    <string name="text_title">Título</string>
    <string name="text_description">Descripción</string>
    <string name="text_edit_weight">Editar peso</string>
    <string name="text_example_class">YOGA | 19:00 a 20:00</string>
    <string name="text_free">5/7</string>
    <string name="description_check">Apuntarse</string>
    <string name="text_comparative">Comparativa de peso</string>
    <string name="text_weight_actuality">Peso actual: 72.5 kg</string>
    <string name="text_objective_weight">Peso objetivo: 70 kg</string>
    <string name="text_ranking">Ranking</string>
    <string name="text_icon_gymmodel">Icono GymModel</string>
    <string name="text_user2">Usuario 2</string>
    <string name="text_weight_exampl">12 kg</string>
    <string name="text_user1">Usuario 1</string>
    <string name="txt_weight_examp">15 kg</string>
    <string name="txt_user3">Usuario 3</string>
    <string name="text_weight3">10 kg</string>
    <string name="text_progress">Progreso</string>
    <string name="description_icon_gymmodel">Icono GymModel</string>
    <string name="text_ask_weight">⚠️ Indica tu peso para visualizar la gráfica de progreso.</string>
    <string name="description_edit_weight">Editar peso</string>
    <string name="text_plaintraining">Plan IA Entrenamiento</string>
    <string name="text_title_plan_training">PLAN DE ENTRENAMIENTO</string>
    <string name="text_generate_plan">Generando Plan...</string>
    <string name="description_generate_plan">Generar nuevo plan IA</string>
    <string name="title_plan_nutrition">PLAN DE COMIDAS</string>
    <string name="text_tool_plan_nutrition">Plan IA Comidas</string>
    <string name="text_plan_ia_favorites">Planes IA Favoritos</string>
    <string name="text_ia">IA</string>
    <string name="icono_gymmodel">Icono GymModel</string>
    <string name="text_planes_generate">GENERAR PLANES</string>
    <string name="description_logo">Logo</string>
    <string name="text_classes_calendar">Calendario Clases</string>
    <string name="description_week_last">Semana anterior</string>
    <string name="text_week_month">Semana del 12 al 18 de mayo</string>
    <string name="text_week_next">Semana siguiente</string>
    <string name="text_chat_coach">Chat con Entrenador</string>
    <string name="hint_text_message">Escribe tu mensaje...</string>
    <string name="description_send">Enviar</string>
    <string name="text_create_you_plan">CREA TU PLAN PERSONALIZADO</string>
    <string name="text_sex">Sexo</string>
    <string name="text_age">Edad</string>
    <string name="text_up_age">Subir edad</string>
    <string name="text_down_age">Bajar edad</string>
    <string name="text_height">Altura (cm)</string>
    <string name="text_weight_kg">Peso (kg)</string>
    <string name="text_weight_up">Subir peso</string>
    <string name="text_down_weight">Bajar peso</string>
    <string name="text_objective">Objetivo</string>
    <string name="text_level">Nivel</string>
    <string name="text_days_free">Días disponibles</string>
    <string name="text_generate_plan2">GENERAR PLAN</string>
    <string name="text_home">Inicio</string>
    <string name="text_user">¡Hola, Usuario!</string>
    <string name="text_home_2">¡Nos alegra verte de nuevo en GymModel!</string>
    <string name="text_home_3">🤖 Consejo del día: No olvides hidratarte entre series.</string>
    <string name="text_home_4">Plan en curso</string>
    <string name="text_home_5">No tienes ningún plan en curso</string>
    <string name="text_home_6">📍 Nuestra ubicación</string>
    <string name="imv_icon">Icono entrenamiento</string>
    <string name="txt_ia_home">Entrenamiento</string>
    <string name="description_nutrition">Icono nutrición</string>
    <string name="text_nutrition">Nutrición</string>
    <string name="text_ia_home_2">PLANES EN CURSO</string>
    <string name="icon_training_course">Icono entrenamiento en curso</string>
    <string name="text_training_in_course">Entrenamiento en curso</string>
    <string name="description_icon_in_course">Icono nutrición en curso</string>
    <string name="text_ia_home_3">Nutrición en curso</string>
    <string name="text_ia_home_4">FAVORITOS</string>
    <string name="description_icon_favorites">Icono Favoritos</string>
    <string name="text_favorites">Favoritos</string>

</resources>
