<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/padding_0"
        android:layout_height="@dimen/padding_very_very_big_56"
        android:background="@color/color_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/padding_big_24"
            android:layout_height="@dimen/padding_big_24"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/padding_normal_16"
            android:src="@drawable/ic_arrow_left"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_terms_condition"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/padding_0"
        android:layout_height="@dimen/padding_0"
        android:layout_margin="@dimen/padding_normal_16"
        app:cardCornerRadius="@dimen/padding_big_small_8"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_very_big_32">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_welcome"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginBottom="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_training_phisicaly"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_use"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_terms_conditions"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_funcion"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_access_login_reg"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_access"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_responsability"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_propiety"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_propiety"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_privacity"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dates"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_resp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_resp"
                    android:textSize="14sp"
                    android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_contact"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="@dimen/padding_small_6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_cancontact"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/padding_big_small_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_grateful"
                    android:textStyle="italic"
                    android:textSize="14sp"
                    android:layout_marginTop="@dimen/padding_normal_16"/>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
