<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fillViewport="true"
    android:padding="@dimen/padding_big_24">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/padding_big_40"
            android:layout_height="@dimen/padding_big_40"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="Volver"
            android:layout_gravity="start"
            android:layout_marginTop="28dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_create_you_plan"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/color_primary"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:layout_marginTop="@dimen/padding_input_12"
            android:layout_marginBottom="@dimen/padding_big_24"
            android:fontFamily="@font/montserrat_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sex"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <Spinner
            android:id="@+id/spSexo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="@dimen/padding_input_12"
            android:layout_marginBottom="@dimen/padding_normal_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_age"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/padding_normal_16">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/padding_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="25" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/padding_big_small_8">

                <ImageButton
                    android:id="@+id/btnEdadUp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_up"
                    android:background="@null"
                    android:contentDescription="@string/text_up_age" />

                <ImageButton
                    android:id="@+id/btnEdadDown"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@null"
                    android:contentDescription="@string/text_down_age" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_height"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <Spinner
            android:id="@+id/spAltura"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="@dimen/padding_input_12"
            android:layout_marginBottom="@dimen/padding_normal_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_weight_kg"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/padding_normal_16">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/padding_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="70" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/padding_big_small_8">

                <ImageButton
                    android:id="@+id/btnPesoUp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_up"
                    android:background="@null"
                    android:contentDescription="@string/text_weight_up" />

                <ImageButton
                    android:id="@+id/btnPesoDown"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_down"
                    android:background="@null"
                    android:contentDescription="@string/text_down_weight" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_objective"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <Spinner
            android:id="@+id/spObjetivo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="@dimen/padding_input_12"
            android:layout_marginBottom="@dimen/padding_normal_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_level"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <Spinner
            android:id="@+id/spNivel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="@dimen/padding_input_12"
            android:layout_marginBottom="@dimen/padding_normal_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_days_free"
            android:textStyle="bold"
            android:textColor="@color/color_on_background" />
        <Spinner
            android:id="@+id/spDias"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="@dimen/padding_input_12"
            android:layout_marginBottom="@dimen/padding_big_24" />

        <Button
            android:id="@+id/btnGenerarPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_generate_plan2"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/padding_big_small_8"
            android:padding="@dimen/padding_input_12"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_big_24"
            android:background="@drawable/bg_button_round"
            android:foreground="@null"
            android:stateListAnimator="@null" />

    </LinearLayout>
</ScrollView>
