<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_normal_16"
    android:layout_marginHorizontal="@dimen/padding_input_12"
    app:cardCornerRadius="20dp"
    app:cardElevation="@dimen/padding_big_small_8"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_surface"
        android:padding="18dp">

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tvtipo"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/color_primary"
            android:layout_marginBottom="@dimen/padding_very_small_4" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_calendar"
            android:textSize="12sp"
            android:textColor="@color/color_on_background"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tvContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_example_day"
            android:textSize="15sp"
            android:lineSpacingExtra="@dimen/padding_small_6"
            android:textColor="@color/color_on_background" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
